PingApplication/ping-application-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-application
spec:
  selector:
    matchLabels:
      app: ping-application
  replicas: 1
  template:
    metadata:
      labels:
        app: ping-application
      annotations:
        productName: "IBM App Connect Enterprise for non-production"
        productID: eb5b5e73f62b4dcf8c434c6274a158a7
        productMetric: FREE
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: ping-application
        image: quay.io/trevor_dolby/ace-ping-application:latest
        ports:
        - containerPort: 7800
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-application-2
spec:
  selector:
    matchLabels:
      app: ping-application-2
  replicas: 1
  template:
    metadata:
      labels:
        app: ping-application-2
      annotations:
        productName: "IBM App Connect Enterprise for non-production"
        productID: eb5b5e73f62b4dcf8c434c6274a158a7
        productMetric: FREE
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: ping-application-2
        image: quay.io/trevor_dolby/ace-ping-application:latest
        ports:
        - containerPort: 7800
