PingApplication/ping-application-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ping-application-service
spec:
  ports:
    - protocol: TCP
      port: 7800
      targetPort: 7800
  selector:
    app: ping-application
---
kind: Service
apiVersion: v1
metadata:
  name: ping-application-2-service
spec:
  ports:
    - protocol: TCP
      port: 7800
      targetPort: 7800
  selector:
    app: ping-application-2
