PingApplication/ping-application-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ping-application-vs
spec:
  hosts:
  - "*"
  gateways:
  - ping-application-gw
  http:
  - match:
    - headers:
        X-ABTEST:
          exact: TEST
    route:
    - destination:
        host: ping-application-service
        port:
          number: 7800
      weight: 50
    - destination:
        host: ping-application-2-service
        port:
          number: 7800
      weight: 50
